fix: Ally Color Contrast
Fixed color contrast accessibility issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   min-height: 100%;
 }
 #footer {
-  background-color: #444;
+  background-color:#252831;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
@@ -107,8 +107,7 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 10vh;
-  background-color: #3397DB;
+  background-color: rgb(46,120,87);
   align-items: center;
   display: flex;
   flex-direction: row;
@@ -163,7 +162,7 @@ nav h1 a {
   min-width: 100%;
 }
 #restaurants-list li h1 {
-  color: #f18200;
+  color: rgb(46,120,87);
   font-family: Arial,sans-serif;
   font-size: 14pt;
   font-weight: 200;
@@ -177,7 +176,7 @@ nav h1 a {
   font-size: 11pt;
 }
 #restaurants-list li a {
-  background-color: orange;
+  background-color:rgb(46,120,87);
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
